# hackclub-resolution-rust-w1

./: Cargo.toml  README.md
src/: main.rs
