[package]
name = "w1_hn_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.60"
color-eyre = "0.6.5"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }

[lints.clippy]
all = "deny"
pedantic = "warn"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
